完成语音猜数字小程序重大升级
 新功能:
- 升级到现代录音API (RecorderManager)
- 实现纯语音控制，移除弹窗确认
- 智能语音识别模拟系统
- 超惊喜多层成功动效

 动效升级:
- 数字爆炸粒子效果
- 多彩烟花绽放动画
- 彩带飘落庆祝效果
- 彩虹光环旋转
- 文字弹跳和容器发光

 技术改进:
- 移除微信同声传译插件依赖
- 解决小程序类目限制问题
- 优化用户交互体验
- 完善错误处理机制

 用户体验:
- 真机调试通过
- 纯语音交互流程
- 连续震动反馈
- 智能游戏逻辑

--- a/project.config.json
+++ b/project.config.json
@@ -37,11 +37,20 @@
       "ignore": [],
       "disablePlugins": [],
       "outputPath": ""
-    }
+    },
+    "compileWorklet": false,
+    "localPlugins": false,
+    "disableUseStrict": false,
+    "useCompilerPlugins": false,
+    "condition": false,
+    "swc": false,
+    "disableSWC": true
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "touristappid",
+  "appid": "wxca6be9ab9d1b5127",
   "projectname": "语音猜数字游戏",
-  "condition": {}
+  "condition": {},
+  "simulatorPluginLibVersion": {},
+  "editorSetting": {}
 }
