修复安全问题：移除敏感AppID信息
 安全修复:
- 将真实AppID替换为占位符
- 添加私有配置文件到.gitignore
- 创建配置模板文件

 文档更新:
- 更新README配置说明
- 添加安全配置指南
- 提供项目配置模板

 配置优化:
- 防止敏感信息泄露
- 规范化项目配置流程
- 提供开发者友好的配置指南

--- a/project.config.example.json
+++ b/project.config.example.json
@@ -12,7 +12,7 @@
     "coverView": true,
     "es6": true,
     "postcss": true,
-    "compileHotReLoad": false,
+    "compileHotReLoad": true,
     "lazyloadPlaceholderEnable": false,
     "preloadBackgroundData": false,
     "minified": true,
@@ -38,19 +38,11 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "compileWorklet": false,
-    "localPlugins": false,
-    "disableUseStrict": false,
-    "useCompilerPlugins": false,
-    "condition": false,
-    "swc": false,
-    "disableSWC": true
+    "ignoreUploadUnusedFiles": true
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
   "appid": "YOUR_WECHAT_APPID_HERE",
   "projectname": "语音猜数字游戏",
-  "condition": {},
-  "simulatorPluginLibVersion": {},
-  "editorSetting": {}
+  "condition": {}
 }
