--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ Thumbs.db
 # 微信开发者工具生成的文件
 miniprogram_npm/
 .miniprogram_cache/
+
+# 私有配置文件（包含敏感信息）
+project.config.local.json
+project.private.config.json
